Add game mechanics

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<div id="ui">
+			<div id="status">Tap a bot to select, tap again to toggle shoot. Drag to set move or shoot.</div>
+			<button id="start-round" type="button">Start round</button>
+		</div>
 		<script type="module" src="dist/main.js"></script>
 	</body>
 </html>
